--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ android {
 
     defaultConfig {
         applicationId "io.github.pastthepixels.freepaint"
+        // compileSdkPreview: something required by Pathway
+        compileSdkPreview "UpsideDownCake"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -42,6 +44,7 @@ dependencies {
     implementation 'com.github.martin-stone:hsv-alpha-color-picker-android:3.0.1'
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'com.takisoft.preferencex:preferencex:1.1.0'
+    implementation 'dev.romainguy:pathway:0.12.0'
     /* End custom modules */
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
