"Hey, I wonder why F-Droid isn't updating FreePaint..."
OH MY GOD IT'S BEEN SEVEN DAYS AND I FORGOT TO INCREMENT THE VERSION CODE

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         applicationId "io.github.pastthepixels.freepaint"
         minSdk 24
         targetSdk 34
-        versionCode 3
+        versionCode 4 // Change this when you want to make another version!!
         versionName "1.1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
