Compile C++ libs for armeabi/x86_64?
The ARM virtual machine doesn't work but the x86_64 one does - and it works on my Pixel - so we just need to test it on armeabi architecture.
Also the config was mostly from StackOverflow so I'll have to check how/if this messes with reproducible builds.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,13 @@ android {
         versionName "1.3.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            moduleName "resolver"
+            stl "gnustl_shared"
+            cFlags "-std=c++11"
+            abiFilters = ['armeabi', 'arm-v7', 'x86_64']
+        }
     }
 
     buildTypes {
@@ -27,6 +34,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     buildFeatures {
         viewBinding true
     }
